ログインログアウト

--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -1,20 +1,24 @@
 h1 ユーザー登録
 
-= form_with model: [@user], local: true do |f|
-  = render 'shared/error_messages', model: @user
-  .form-group
-    = f.label :name, '名前'
-    = f.text_field :name, class: 'form-control'
-  .form-group
-    = f.label :email, 'メールアドレス'
-    = f.email_field :email, class: 'form-control'
-  .form-group
-    = f.label :age, '年齢'
-    = f.number_field :age, class: 'form-control'
-  .form-group
-    = f.label :password, 'パスワード'
-    = f.password_field :password, class: 'form-control'
-  .form-group
-    = f.label :password_confirmation, 'パスワード(確認)'
-    = f.password_field :password_confirmation, class: 'form-control'
-    = f.submit '登録する', class: 'btn btn-primary'
+.container
+  .row
+    .col-md-6.offset-md-3
+      .card
+        = form_with model: [@user], local: true do |f|
+          = render 'shared/error_messages', model: @user
+          .form-group
+            = f.label :name, '名前'
+            = f.text_field :name, class: 'form-control'
+          .form-group
+            = f.label :email, 'メールアドレス'
+            = f.email_field :email, class: 'form-control'
+          .form-group
+            = f.label :age, '年齢'
+            = f.number_field :age, class: 'form-control'
+          .form-group
+            = f.label :password, 'パスワード'
+            = f.password_field :password, class: 'form-control'
+          .form-group
+            = f.label :password_confirmation, 'パスワード(確認)'
+            = f.password_field :password_confirmation, class: 'form-control'
+            = f.submit '登録する', class: 'btn btn-primary'
