--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,5 +11,7 @@ html
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_pack_tag 'application'
   body
+    = render 'shared/header'
     = render 'shared/flash'
-    = yield
+    main
+      = yield
