gem pagy installとview調整

--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -10,7 +10,7 @@ h1 投稿
             = f.label :title, 'タイトル'
             = f.text_field :title, class: 'form-control'
           .form-group
-            = f.label :body, 'メールアドレス'
+            = f.label :body, '本文'
             = f.text_area :body, class: 'form-control'
 
-            = f.submit '更新する', class: 'btn btn-primary'
+            = f.submit '投稿する', class: 'btn btn-primary'
