公開カラム追加~View制御まで

--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -2,6 +2,7 @@
   .container
     .row
       - @articles.each do |article|
+       - if article.publish? || current_user
         .col-sm-4
           .card.text-center
             .card-header
