--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -12,5 +12,11 @@ h1 Articles#edit
           .form-group
             = f.label :body, '本文'
             = f.text_area :body, class: 'form-control'
+          .form-group
+            = f.label :status, :publish
+            = f.radio_button :status, :publish, class: 'custom-control custom-radio custom-control-inline'
+            = f.label :status, :non_published
+            = f.radio_button :status, :non_published, class: 'custom-control custom-radio custom-control-inline' 
+          
 
-            = f.submit '更新する', class: 'btn btn-primary'
+          = f.submit '更新する', class: 'btn btn-primary'
