--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -12,5 +12,9 @@ h1 投稿
           .form-group
             = f.label :body, '本文'
             = f.text_area :body, class: 'form-control'
+          .form-group
+            = f.collection_radio_buttons :status, Article.statuses_i18n, :first, :last, include_hidden: false do |b|
+              - content_tag(:div, class: "custom-control custom-radio custom-control-inline") do
+                - b.radio_button(class: "custom-control custom-radio") + b.label(class: "custom-control custom-radio")
 
             = f.submit '投稿する', class: 'btn btn-primary'
